--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "bootstrap": "^5.3.3",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.7",
+    "react-cookie": "^7.2.2",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.0.2",
