--- a/client/.env
+++ b/client/.env
@@ -1,1 +1,1 @@
-VITE_BASEURL=http://localhost:8080
+VITE_BASEURL=mongodb+srv://niksnimje4:niks@42@cluster0.ejsq4.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
